--- a/package.json
+++ b/package.json
@@ -3,23 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/axios": "^0.14.0",
-    "@types/jest": "^27.5.2",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.2",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.77",
-    "@types/react-d3-graph": "^2.6.7",
     "@types/react-dom": "^18.2.25",
-    "axios": "^1.6.8",
     "react": "^18.2.0",
-    "react-d3-graph": "^2.6.0",
     "react-dom": "^18.2.0",
-    "react-force-graph": "^1.44.3",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "typescript": "^5.4.5",
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
