--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.2.77",
     "@types/react-dom": "^18.2.25",
     "react": "^18.2.0",
+    "react-basic-modal-dialog": "^0.1.4",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "typescript": "^5.4.5",
