--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.77",
     "@types/react-dom": "^18.2.25",
+    "html-react-parser": "^5.1.10",
     "react": "^18.2.0",
     "react-basic-modal-dialog": "^0.1.4",
     "react-dom": "^18.2.0",
