--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^15.0.2",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
+    "@types/md5": "^2.3.5",
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.77",
     "@types/react-dom": "^18.2.25",
@@ -16,8 +17,10 @@
     "react": "^18.2.0",
     "react-basic-modal-dialog": "^0.1.4",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "typescript": "^5.4.5",
+    "use-query-params": "^2.2.1",
     "web-vitals": "^3.5.2"
   },
   "scripts": {
