--- a/apps/backend/.gitignore
+++ b/apps/backend/.gitignore
@@ -122,6 +122,9 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+# SQLite persistent storage
+data/
+
 # yarn v2
 .yarn/cache
 .yarn/unplugged
