--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.73.0",
     "@keyv/sqlite": "^3.6.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -20,6 +21,7 @@
     "express": "^4.19.2",
     "friendly-username-generator": "^2.0.4",
     "keyv": "^4.5.4",
+    "openai": "^6.18.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "uuid": "^9.0.1",
