--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -18,6 +18,7 @@
     "@types/keyv": "^4.2.0",
     "@types/winston": "^2.4.4",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.4",
     "express": "^4.19.2",
     "friendly-username-generator": "^2.0.4",
     "keyv": "^4.5.4",
