--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.21",
     "@types/keyv": "^4.2.0",
     "@types/winston": "^2.4.4",
+    "cheerio": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.4",
     "express": "^4.19.2",
