--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -21,6 +21,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "remark-gfm": "^4.0.1",
     "typescript": "^5.4.5",
     "use-query-params": "^2.2.1",
     "usehooks-ts": "^3.1.0",
