--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@ Thumbs.db
 
 # Test coverage
 coverage/
+playwright-report/
+test-results/
+tests/e2e/playwright-report/
+tests/e2e/test-results/
 
 # Benchmark results (generated, not committed)
 tools/benchmark/results/*.json
